# kbfxmenu

./: ProjectHome.md  RoadMap.md
kbfx3/: build.sh  kbfx-svn.ebuild.in
kbfx3/cmakemodules/: FindKDE4Internal.cmake  FindStrigi.cmake  KDE3Macros.cmake  KDE4Macros.cmake  makedist.sh.in
kbfx3/configdialog/: CMakeLists.txt  kbfx_theme.desktop  kbfxconfigapp.cpp  kbfxconfigapp.h  kbfxconfigdlgabout.ui.h  kbfxconfigdlgbutton.ui  kbfxconfigdlgfonts-old.ui  kbfxconfigdlglayout.ui  kbfxconfigdlglayout.ui.h  kbfxconfigdlgmain.ui.h  kbfxconfigdlgplugins.ui  kbfxconfigdlgplugins.ui.h  kbfxconfigdlgtooltip.ui  kbfxconfigdlgtooltip.ui.h  main.cpp  x-kbfxtheme.desktop
kbfx3/doc/: CREDITS  HACKING  HOWTO  KNOWN_BUGS  LICENSE  NEWS  TODO
kbfx3/doc/common/: CMakeLists.txt
kbfx3/doc/en/: CMakeLists.txt
kbfx3/images/: CMakeLists.txt
kbfx3/kbfxlib/common/: kbfxconfig.cpp  kbfxconfig.h  kbfxfontchooser.cpp  kbfxfontchooser.h  kbfxkiodownload.cpp  kbfxkiodownload.h  kbfxpixmaplabel.cpp  kbfxpixmaplabel.h  kbfxplasmapixmapprovider.h  kbfxthemesdata.cpp
kbfx3/kbfxlib/data/: CMakeLists.txt  kbfxdatagroup.h  kbfxdatasource.cpp  kbfxdatastack.cpp  kbfxplasmadataplugin.cpp  kbfxplasmadataplugin.h  kbfxplasmapluginloader.cpp  kbfxplasmapluginloader.h  kbfxplugin.cpp
kbfx3/plugins/applications/: CMakeLists.txt  kbfxplasmadataplugin.cpp
kbfx3/plugins/plasmoids/: CMakeLists.txt
kbfx3/plugins/recentstuff/: CMakeLists.txt
kbfx3/plugins/settings/: kbfxplasmadatapluginsettings.cpp
kbfx3/po/: it.po  nl.po
kbfx3/skin/raster/2panels/: CMakeLists.txt
kbfx3/skin/raster/default/: kbfxfontrc  kbfxlayoutrc  version-2
kbfx3/src/: CMakeLists.txt  kbfxbutton.cpp  kbfxplasmacanvasabstractitem.h  kbfxplasmacanvasgroupview.cpp  kbfxplasmacanvasgroupview.h  kbfxplasmacanvasitem_events.h  kbfxplasmacanvasitemwrapper.cpp  kbfxplasmacanvasitemwrapper.h  kbfxplasmacanvasrtti.h  kbfxplasmacanvasstack.cpp  kbfxplasmacanvasstackdata.h  kbfxplasmacanvasview.h  kbfxplasmaindexitem.cpp  kbfxplasmaindexview.cpp  kbfxplasmaindexview.h  kbfxsignal.h  kbfxspinx.cpp  kbfxspinx.h  kbfxspinxmenu.h  kbfxspinxscrollbar.h  kbfxspinxtoolbar.h  kbfxspinxtoolbutton.cpp  kbfxspinxtoolbutton.h  kbfxspinxtop.cpp  kbfxspinxview.cpp  kbfxtooltip.h
kbfx4/configdialog/: images.qrc  kbfx_about.cpp  kbfx_about.h  kbfx_about.ui  kbfx_fonts.cpp  kbfx_fonts.h  kbfx_fonts.ui  kbfx_kickerbtn.cpp  kbfx_kickerbtn.ui  kbfx_layout.cpp  kbfx_layout.ui  kbfx_main.cpp  kbfx_main.h  kbfx_main.ui  kbfx_mstyle.h  kbfx_mstyle.ui  kbfx_plugins.cpp  kbfx_plugins.h  kbfx_plugins.ui  kbfx_themes.cpp  kbfx_themes.h  kbfx_themes.ui  kbfx_tooltip.h  kbfx_tooltip.ui  main.cpp
kbfx4/configdialog/trans/: kbfxconfig_es.ts
trunk/kbfx3/: CMakeLists.txt  build.sh  config.h.in  kbfx-0.4.9.3.1.ebuild  kbfx.ebuild.in  kbfx.spec  kbfx.spec.in  strigi-0.3.11.ebuild
trunk/kbfx3/cmakemodules/: FindKBFX.cmake  FindKDE4.cmake  FindKdeLibs.cmake
trunk/kbfx3/configdialog/: kbfx_install_theme.desktop  kbfx_prepare_theme.desktop  kbfxconfigapp.desktop  kbfxconfigapp.lsm  kbfxconfigappui.rc  kbfxconfigdlgabout.ui  kbfxconfigdlgbutton.ui.h  kbfxconfigdlgfonts-old.ui.h  kbfxconfigdlgmain.ui  kbfxconfigdlgstyle.ui  kbfxconfigdlgstyle.ui.h  kbfxconfigdlgthemes.ui  kbfxconfigdlgthemes.ui.h  kbfxthemeinfo.ui  kbfxthemeinfo.ui.h
trunk/kbfx3/doc/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  README
trunk/kbfx3/doc/en/: index.docbook.in
trunk/kbfx3/kbfx-0.4.9.3.1/: .project
trunk/kbfx3/kbfxlib/common/: CMakeLists.txt  kbfxplasmapixmapprovider.cpp  kbfxpushbutton.cpp  kbfxpushbutton.h  kbfxthemesdata.h
trunk/kbfx3/kbfxlib/data/: kbfxdatagroup.cpp  kbfxdatagrouplist.cpp  kbfxdatagrouplist.h  kbfxdatasource.h  kbfxdatastack.h  kbfxplugin.h
trunk/kbfx3/patches/: 001.patch
trunk/kbfx3/plugins/common/: CMakeLists.txt  kbfxplasmadataplugin-common.h
trunk/kbfx3/plugins/plasmoids/: kbfxplasmadatapluginplosmoid.cpp
trunk/kbfx3/plugins/recentstuff/: kbfxplasmarecentstuff.cpp
trunk/kbfx3/plugins/settings/: CMakeLists.txt
trunk/kbfx3/plugins/strigi/: CMakeLists.txt  kbfxstrigiplugin.cpp  kbfxstrigiplugin.h
trunk/kbfx3/po/: CMakeLists.txt  bg.po  hu.po
trunk/kbfx3/skin/raster/2panels/: kbfxfontrc  kbfxlayoutrc
trunk/kbfx3/skin/raster/default/: CMakeLists.txt
trunk/kbfx3/src/: kbfxbutton.h  kbfxplasmacanvasabstractitem.cpp  kbfxplasmacanvasgroup.cpp  kbfxplasmacanvasgroup.h  kbfxplasmacanvasitem.cpp  kbfxplasmacanvasitem.h  kbfxplasmacanvasitem_events.cpp  kbfxplasmacanvasstack.h  kbfxplasmacanvasview.cpp  kbfxplasmaindexitem.h  kbfxspinx.desktop  kbfxspinxmenu.cpp  kbfxspinxpopup.cpp  kbfxspinxpopup.h  kbfxspinxscrollbar.cpp  kbfxspinxtoolbar.cpp  kbfxspinxtop.h  kbfxspinxview.h  kbfxtooltip.cpp
trunk/kbfx4/configdialog/: images.qrc  index.html  kbfx_about.cpp  kbfx_about.ui  kbfx_fonts.cpp  kbfx_fonts.h  kbfx_fonts.ui  kbfx_kickerbtn.cpp  kbfx_kickerbtn.h  kbfx_kickerbtn.ui  kbfx_layout.cpp  kbfx_layout.h  kbfx_layout.ui  kbfx_main.cpp  kbfx_main.h  kbfx_main.ui  kbfx_mstyle.cpp  kbfx_mstyle.h  kbfx_mstyle.ui  kbfx_plugins.cpp  kbfx_plugins.h  kbfx_plugins.ui  kbfx_themes.cpp  kbfx_themes.h  kbfx_themes.ui  kbfx_tooltip.cpp  kbfx_tooltip.ui  main.cpp
wiki/: RoadMap.wiki
